Minor CSS fix to grid for header shifting.  Fixes #8881
git-svn-id: http://svn.dojotoolkit.org/src/branches/1.3/dojox@17296 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/soriaGrid.css
+++ b/grid/resources/soriaGrid.css
@@ -49,6 +49,7 @@
 }
 .dj_ie6 .soria .dojoxGridArrowButtonNode {
 	background-image:url("../../../dijit/themes/soria/images/spriteArrows.gif");
+	margin-left: 0px;
 }
 
 .soria .dojoxGridSortUp .dojoxGridArrowButtonNode {
